Detail: fix bug where dots appear in alias hints on iOS

--- a/src/new.sass
+++ b/src/new.sass
@@ -193,7 +193,7 @@ body
 
 .AliasList
   position: relative
-  list-style: ""
+  list-style: none
   padding: 0 0 0 3rem
 
   > li
